# Weather-Dashboard

./: .env  Cargo.toml  README.md
src/: main.rs
static/: index.html  style.css
